# sounddocs

./: .gitignore  .lintstagedrc.js  .prettierignore  .sqlfluff  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.claude/: claude.md  config.yaml
.claude/agents/: accessibility-auditor.md  agent-orchestrator.md  ai-engineer.md  angular-architect.md  api-architect.md  api-documenter.md  architecture-reviewer.md  backend-engineer.md  blockchain-developer.md  build-engineer.md  business-analyst.md  chaos-engineer.md  cli-developer.md  cloud-architect.md  code-reviewer.md  competitive-analyst.md  compliance-auditor.md  content-marketing-strategist.md  context-manager.md  cpp-expert.md  csharp-dotnet-expert.md  customer-success-manager.md  data-analyst.md  data-engineer.md  data-researcher.md  data-scientist.md  database-administrator.md  database-optimizer.md  debugger.md  dependency-manager.md  deployment-engineer.md  devops-engineer.md  devops-incident-responder.md  distributed-systems-architect.md  django-expert.md  documentation-engineer.md  dotnet-core-specialist.md  dotnet-framework-specialist.md  dx-optimizer.md  electron-pro.md  (+76 more)
.cursor/rules/: sounddocs-rule.mdc
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  SECURITY.md  issue_template.md
.github/ISSUE_TEMPLATE/: bug-report-or-feature-request.md
.github/workflows/: build-installers.yml  ci.yml  pr-checks.yml
.husky/: commit-msg
agents/capture-agent-py/: README.md  generate_cert.py  main.py  pyproject.toml  run.bat  run.sh
agents/capture-agent-py/capture_agent/: __init__.py  __main__.py  audio.py  dsp.py  schema.py  server.py  signal_generator.py
apps/web/: index.html  package.json  tsconfig.app.json  vite.config.ts
public/: _redirects  robots.txt  sitemap.xml
scripts/: add_docker_apt_repository  bootstrap_nodejs  docker_entrypoint  install_docker
src/: App.tsx  index.css
src/components/: Contact.tsx  CorporateMicPlotExport.tsx  Dashboard.tsx  ExportModal.tsx  Features.tsx  Footer.tsx  GetStarted.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  MobileScreenWarning.tsx  PatchSheetExport.tsx  PrintCorporateMicPlotExport.tsx  PrintPatchSheetExport.tsx  PrintStagePlotExport.tsx  ProtectedRoute.tsx  ShareModal.tsx  StagePlotExport.tsx  Testimonials.tsx  WheresCJ.tsx
src/constants/: inputTypes.ts  outputTypes.ts
src/hooks/: useScreenSize.tsx
src/lib/: AuthContext.tsx  constants.ts  shareUtils.ts  supabase.ts
src/pages/: AllCorporateMicPlots.tsx  AllPatchSheets.tsx  AllPixelMaps.tsx  AllProductionSchedules.tsx  AllRunOfShows.tsx  AllStagePlots.tsx  AllTheaterMicPlots.tsx  AudioCategoryPage.tsx  AudioFormulasPage.tsx  Landing.tsx  (+32 more)
(+319 files in other folders)
