[tool.poetry]
name = "capture-agent"
version = "0.1.13"
description = "SoundDocs Capture Agent for multi-channel audio analysis."
authors = ["CJ Vana cj@sounddocs.org"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
sounddevice = "^0.4.6"
numpy = "^2.3.2"
scipy = "^1.16.1"
pyfftw = "^0.14.0"
pydantic = "^2.7.1"
cryptography = ">=41,<44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
