[tool.poetry]
name = "capture-agent"
version = "0.1.13"
description = "SoundDocs Capture Agent for multi-channel audio analysis."
authors = ["CJ Vana cj@sounddocs.org"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
sounddevice = "^0.4.6"
numpy = "^2.3.2"
scipy = "^1.16.1"
pyfftw = "^0.14.0"
pydantic = "^2.7.1"
cryptography = ">=41,<44"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]

[tool.ruff.lint.isort]
known-first-party = ["capture_agent"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
