[tool.poetry]
name = "capture-agent"
version = "0.2.0"
description = "SoundDocs Capture Agent for multi-channel audio analysis."
authors = ["CJ Vana cj@sounddocs.org"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
sounddevice = "^0.4.6"
numpy = "^2.3.2"
scipy = "^1.16.1"
pyfftw = { version = "^0.14.0", optional = true }
pydantic = "^2.7.1"
cryptography = ">=41,<44"
colorednoise = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
